--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # Database Settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/re_member
-spring.datasource.username=brian
-spring.datasource.password=12345
+#to run locally comment back in lines 3-5, and comment out ln 7, visa versa for deployment
+# spring.datasource.url=jdbc:postgresql://localhost:5432/re_member
+# spring.datasource.username=brian
+# spring.datasource.password=12345
+
+spring.datasource.url=${DATABASE_URL}
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
